--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "chai-as-promised": "^5.3.0",
     "glob": "^7.0.5",
     "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "canvas": "^1.4.0"
   }
 }
